# telegram-daily-bot

./: .env.example  .gitignore  AGENTS.md  ANTIGRAVITY_RULES_AND_SKILLS.md  Dockerfile  GEMINI.md  config.py  requirements-dev.txt  requirements.txt
crypto_copy_trader/: .env.example  .gitignore  Dockerfile  README.md  config.py  execution.py  main.py  models.py  monitors.py  pyproject.toml  reporting.py  requirements.txt  storage.py  wallet_scorer.py
crypto_copy_trader/analysis/: performance_tracker.py  telegram_notifier.py  trade_logger.py
crypto_copy_trader/crypto_copy_trader/: __init__.py
crypto_copy_trader/data/: binance_symbols.json  known_token_map.json  mev_blacklist.json
crypto_copy_trader/docs/: 2026-04-23-work-summary.md  CODEX_SPEC.md  STATUS.md  pending-verification.md  progress-log.md  runtime-runbook.md  verification-checklist.md
crypto_copy_trader/execution/: binance_executor.py  position_sizer.py  risk_guard.py
crypto_copy_trader/models/: decision.py  events.py  portfolio.py  signals.py  snapshot.py
crypto_copy_trader/monitors/: base.py  bsc_monitor.py  bsc_ws_monitor.py  eth_monitor.py  eth_ws_monitor.py  sol_monitor.py  sol_ws_monitor.py
crypto_copy_trader/scripts/: discover_wallets.py  promote_wallets.py  refresh_mev_blacklist.py  refresh_wallets_weekly.py
crypto_copy_trader/signals/: ai_scorer.py  batch_scorer.py  exit_router.py  filters.py  llm_backend.py  mev_detector.py  priority_router.py  quant_filter.py  router.py  scorer.py  sentiment.py  slippage_fee.py  symbol_mapper.py  technicals.py
crypto_copy_trader/storage/: addresses_repo.py  db.py  event_log.py  trades_repo.py
crypto_copy_trader/tests/: test_ai_scorer.py  test_analysis.py  test_anthropic_backend.py  test_batch_scorer.py  test_birdeye_monitor.py  test_bsc_monitor.py  test_config.py  test_decision_snapshot.py  test_discover_enrich.py  test_main.py  (+21 more)
daily_ai_tech_news_zeabur/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
kronos-trading-bot/: .gitignore  README.md  pyproject.toml
(+99 files in other folders)
