[project]
name = "daily-ai-tech-news-zeabur"
version = "0.1.0"
description = "Daily AI-first technology news digest sender for Telegram on Zeabur"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
